# QtGuide

./: .gitignore  LICENSE  README.md
Notepanda/: CMakeLists.txt
Notepanda/src/: main.cpp
Notepanda/src/core/: configmanager.cpp  configmanager.h  texteditor.cpp  texteditor.h
Notepanda/src/ui/: aboutwindow.cpp  aboutwindow.h  linenumberarea.h  mainwindow.cpp  mainwindow.h  preferenceswindow.cpp  preferenceswindow.h
SignalSlot/: CMakeLists.txt  Jerry.h  Tom.h  main.cpp
Snake/: CMakeLists.txt
Snake/resource/: data.txt  snake.qrc
Snake/src/: main.cpp  mainwindow.cpp  mainwindow.h  snake.cpp  snake.h
